--- a/templates/monster.html
+++ b/templates/monster.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1>Random Monster</h1>
-<form action="/monster-results" method="POST">
-<p><span>Challenge Rating:</span><select name="cr" id="cr">
+<form id="form" action="/monster-results" method="POST">
+<p><span>Challenge Rating: </span><select name="cr" id="cr">
     <option value="-3">1/16</option>
     <option value="-2">1/8</option>
     <option value="-1">1/4</option>
     <option value="0">1/2</option>
-    <option value="1">1</option>
+    <option selected value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
     <option value="4">4</option>
@@ -39,24 +39,24 @@
     <option value="30">30</option>
 </select></p>
 
-<p><span>Monster Type:</span><select name="monstertype" id="monstertype">
-    <option value="aberration">Aberration</option>
-    <option value="beast">Beast</option>
-    <option value="celestial">Celestial</option>
-    <option value="construct">Construct</option>
-    <option value="cragon">Dragon</option>
-    <option value="elemental">Elemental</option>
-    <option value="fey">Fey</option>
-    <option value="fiend">Fiend</option>
-    <option value="giant">Giant</option>
-    <option value="humanoid">Humanoid</option>
-    <option value="monstrosity">Monstrosity</option>
-    <option value="plant">Plant</option>
-    <option value="ooze">Ooze</option>
-    <option value="undead">Undead</option>
+<p><span>Monster Type: </span><select name="monstertype" id="monstertype">
+    <option value="Aberration">Aberration</option>
+    <option value="Beast">Beast</option>
+    <option value="Celestial">Celestial</option>
+    <option value="Construct">Construct</option>
+    <option value="Dragon">Dragon</option>
+    <option value="Elemental">Elemental</option>
+    <option value="Fey">Fey</option>
+    <option value="Fiend">Fiend</option>
+    <option value="Giant">Giant</option>
+    <option value="Humanoid">Humanoid</option>
+    <option value="Monstrosity">Monstrosity</option>
+    <option value="Plant">Plant</option>
+    <option value="Ooze">Ooze</option>
+    <option value="Undead">Undead</option>
 </select></p>
 
-<p><input type="submit" value="Submit"></p>
+<p><input type="submit" value="Create Monster"></p>
 
 </form>
 {% endblock %}
