--- a/templates/trap.html
+++ b/templates/trap.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Trap Gen</h1>
-<form action="/trap-results" method="POST">
-    <p><span>Challenge Rating:</span><select name="cr" id="cr">
+<h1>Random Trap</h1>
+<form id="form" action="/trap-results" method="POST">
+    <p><span>Challenge Rating: </span><select name="cr" id="cr">
         <option value="-3">1/16</option>
         <option value="-2">1/8</option>
         <option value="-1">1/4</option>
         <option value="0">1/2</option>
-        <option value="1">1</option>
+        <option selected value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
@@ -39,7 +39,7 @@
         <option value="30">30</option>
     </select></p>
 
-    <p><span>Damage Type:</span><select name="damagetype" id="damagetype">
+    <p><span>Damage Type: </span><select name="damagetype" id="damagetype">
 
         <option value="acid">Acid</option>
         <option value="bludgeoning">Bludgeoning</option>
@@ -54,7 +54,7 @@
 
     </select></p>
 
-    <p><input type="submit" value="Submit"></p>
+    <p><input type="submit" value="Create Trap"></p>
 
 </form>
 {% endblock %}
