--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
             <li><a href="{{ url_for('npc') }}">Random NPC</a></li>
             <li><a href="{{ url_for('trap') }}">Random Trap</a></li>
             <li><a href="{{ url_for('dungeon') }}">Random Dungeon</a></li>
+            <li><a href="{{ url_for('about') }}">About</a></li>
         </ul>
     </nav>
     <div class="container">
