--- a/templates/monster.html
+++ b/templates/monster.html
@@ -39,7 +39,7 @@
     <option value="30">30</option>
 </select></p>
 
-<p><span>Monster Type: </span><select name="monstertype" id="monstertype">
+<p><span>Monster Type: </span><select name="monster_type" id="monster_type">
     <option value="Aberration">Aberration</option>
     <option value="Beast">Beast</option>
     <option value="Celestial">Celestial</option>
