--- a/templates/trap.html
+++ b/templates/trap.html
@@ -39,7 +39,7 @@
         <option value="30">30</option>
     </select></p>
 
-    <p><span>Damage Type: </span><select name="damagetype" id="damagetype">
+    <p><span>Damage Type: </span><select name="damage_type" id="damage_type">
 
         <option value="acid">Acid</option>
         <option value="bludgeoning">Bludgeoning</option>
