--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Monster Generator</title>
+    <title>DM Tools</title>
     <link rel="stylesheet"
           href="{{ url_for('static', filename='css/reset.css') }}">
     <link rel="stylesheet"
@@ -15,7 +15,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <h1><a href="/">DM Tools</a></h1>
+        <h1><a href="/">Dungeon Master Tools</a></h1>
     </header>
     <nav>
         <ul>
