--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
         {% endblock %}
     </div>
     <footer>
-        <p>&copy; 2020 Robert Sharp<span class="right">&lambda;</span></p>
+        <p>&copy; 2020 Robert Sharp & Ethan Jansen<span class="right">&lambda;</span></p>
     </footer>
 </div>
 </body>
