--- a/templates/trap.html
+++ b/templates/trap.html
@@ -41,6 +41,7 @@
 
     <p><span>Damage Type: </span><select name="damage_type" id="damage_type">
 
+        <option value="random">Random</option>
         <option value="acid">Acid</option>
         <option value="bludgeoning">Bludgeoning</option>
         <option value="cold">Cold</option>
