--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>DM Tools</title>
+    <title>Dungeon Master Tools</title>
     <link rel="stylesheet"
           href="{{ url_for('static', filename='css/reset.css') }}">
     <link rel="stylesheet"
